Fix `TestPreprocessor`